Decrease about paragraph font side before the transition to row wrap to avoid text overlap

--- a/frontend/src/pages/Home.scss
+++ b/frontend/src/pages/Home.scss
@@ -39,6 +39,14 @@
   }
 }
 
+@media only screen and (max-width: 1300px) {
+  .welcome-page {
+    &__about {
+      font-size: 1.4em;
+    }
+  }
+}
+
 @media only screen and (max-width: 1000px) {
   .welcome-page {
     &__text {
